<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jamesdpeters.minecraft.chests</groupId>
    <artifactId>ChestsPlusPlus-Master</artifactId>
    <version>2.6.3-Beta</version>

    <properties>
        <maven.compiler.target>8</maven.compiler.target>
        <maven.compiler.source>8</maven.compiler.source>
    </properties>

    <scm>
        <connection>scm:git:git@github.com:JamesPeters98/ChestsPlusPlus.git</connection>
        <developerConnection>scm:git:git@github.com:JamesPeters98/ChestsPlusPlus.git</developerConnection>
        <url>https://github.com/JamesPeters98/ChestsPlusPlus</url>
        <tag>@{project.version}</tag>
    </scm>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>

        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/nexus/repository/public/</url>
        </repository>

        <repository>
            <id>CodeMC</id>
            <url>https://repo.codemc.org/repository/maven-public</url>
        </repository>

<!--        <repository>-->
<!--            <id>sytm-nexus</id>-->
<!--            <url>https://repo.sytm.de/repository/maven-hosted/</url>-->
<!--        </repository>-->

        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <repository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>maven-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.14.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>

        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>plugin-annotations</artifactId>
            <version>1.2.3-SNAPSHOT</version>
        </dependency>

        <!-- 1.3.0 Branch commit 746622a67a -->
        <dependency>
            <groupId>com.github.MinusKube</groupId>
            <artifactId>SmartInvs</artifactId>
            <version>746622a67a</version>
        </dependency>

        <dependency>
            <groupId>net.wesjd</groupId>
            <artifactId>anvilgui</artifactId>
            <version>1.5.3-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>2.2.1</version>
        </dependency>

        <dependency>
            <groupId>com.jamesdpeters.minecraft.chests</groupId>
            <artifactId>ChestsPlusPlus_1_18_R2</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.jamesdpeters.minecraft.chests</groupId>
            <artifactId>ChestsPlusPlus_1_18_R1</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.jamesdpeters.minecraft.chests</groupId>
            <artifactId>ChestsPlusPlus_1_17_R1</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.jamesdpeters.minecraft.chests</groupId>
            <artifactId>ChestsPlusPlus_1_16_R3</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.jamesdpeters.minecraft.chests</groupId>
            <artifactId>ChestsPlusPlus_1_16_R2</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.jamesdpeters.minecraft.chests</groupId>
            <artifactId>ChestsPlusPlus_1_16</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.jamesdpeters.minecraft.chests</groupId>
            <artifactId>ChestsPlusPlus-API</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>22.0.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
            <scope>provided</scope>
        </dependency>



    </dependencies>

    <!--Tell maven how to prepare and build our jar file from our source and dependancies-->
    <build>
        <!--Tell maven what plugins we want to add and what they should do-->
        <plugins>
            <!--Tell maven the id and version of the 'shade' plugin's jar file so it can download it from a repository-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <artifactSet>
                        <includes>
                            <include>fr.minuskube.inv*:*</include>
                            <include>com.github.MinusKube*:*</include>
                            <include>net.wesjd:anvilgui*</include>
                            <include>org.bstats*:*</include>
                            <include>com.jamesdpeters.minecraft.chests</include>
                        </includes>
                    </artifactSet>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <!-- Replace this with your package! -->
                            <shadedPattern>com.jamesdpeters.minecraft.chests</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>fr.minuskube.inv</pattern>
                            <shadedPattern>com.jamesdpeters.minecraft.chests</shadedPattern>
                        </relocation>
<!--                        <relocation>-->
<!--                            <pattern>net.wesjd.anvilgui</pattern>-->
<!--                            <shadedPattern>com.jamesdpeters.minecraft.chests</shadedPattern>-->
<!--                        </relocation>-->
                    </relocations>
                </configuration>


                <executions>
                    <!--Tell the shade plugin when it should be run during a maven build-->
                    <execution>
                        <!--Tell the shade plugin to run once during the 'package' phase of a maven build-->
                        <phase>package</phase>
                        <!--Tell the shade plugin which of it's goals to attempt to run during this phase-->
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <!--Tell the shade plugin which of it's goals to attempt to run during this phase-->
                        <configuration>
                            <!--Tell the shade plugin where to put our jar file-->
                            <outputFile>../Server/plugins/ChestsPlusPlus-${project.version}.jar</outputFile>
<!--                            <minimizeJar>true</minimizeJar>-->
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>templating-maven-plugin</artifactId>
                <version>1.0.0</version>
                <executions>
                    <execution>
                        <id>filter-src</id>
                        <goals>
                            <goal>filter-sources</goal><!-- add this if you filter main sources -->
                            <goal>filter-test-sources</goal><!-- add this if you filter test sources -->
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.0.0-M1</version>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>com.jamesdpeters.minecraft.chests.lang.LangFileProperties</mainClass>
                </configuration>
            </plugin>



        </plugins>

        <!--Tell maven to enable resource filtering so we can use macros like '${project.version}' inside of our plugin.yml-->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

</project>